# gts

./: .gitignore  AUTHORS  Makefile.am  README.md  clean.sh  configure.ac
src/: .gitignore  Makefile.am  fix_gtf.cc  fln.hpp  gb_filter.cc  gbfilter  genbank.hpp  gff.hpp  gff_filter.cc  gff_ids.cc  gtf_filter.cc  gts  gts.cc
src/filters/: cds2cdna_filter.hpp  fln_coords_filter.hpp  inconsistent_coords_filter.hpp  multiple_orf_filter.hpp  multiple_transcript_filter.hpp  one_transcript_filter.hpp  overlap_filter.hpp  strand_filter.hpp  transcript_filter.hpp  utr_filter.hpp
tests/: .gitignore  Makefile.am  check_genbank.cpp  check_gff.cpp  check_gts.cpp
tests/resources/: test.gb  test.gff  test_make.gb  test_tair10_head.gff
